--- a/sections/多元统计分析.tex
+++ b/sections/多元统计分析.tex
@@ -616,7 +616,7 @@
         \end{equation}
         
         }
-        \begin{equation}
+        \begin{equation}\label{EquConditionalPrForGaussian}
             X_1|_{X_2=x_2}\sim N_p(\mu_1+\Sigma _{12}\Sigma _{22}^{-1}(x_2-\mu_2),\,\Sigma _{11}-\Sigma _{12}\Sigma _{22}^{-1}\Sigma _{21})
         \end{equation}
 
