--- a/sections/应用时间序列分析.tex
+++ b/sections/应用时间序列分析.tex
@@ -74,7 +74,7 @@
 
 
 
-\subsection{Stochastic Process and Statistics}
+\subsection{Stochastic Process and Statistics}\label{SubSectionStochasticProcessForTimeSeries}
 \subsubsection{Basic Knowledge of Stochastic Process}
     A stochastic process can be denoted:\index{Stochastic Process}
     \begin{equation}
@@ -338,9 +338,7 @@
         
     \end{itemize}
 
-\begin{point}
-    Statistics
-\end{point}
+\subsubsection{Statistics}
 
     To estimate the above $ \mu _t=\mu $, $ \gamma _k $, $ \rho _k $, $ \phi _{kk} $ given a realization of $ \{X_t\} $, say we have $ \{x_t\}_{t=1}^n $, we can construct:
     \begin{itemize}[topsep=2pt,itemsep=0pt]
