--- a/sections/统计推断.tex
+++ b/sections/统计推断.tex
@@ -762,7 +762,15 @@
     \end{cases}    
 \end{equation}
 
-    Interval Estimation: to estimate $g(\theta)$, give \textbf{two} estimators $\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})$ defined on $\mathscr{X}$ as the two ends of interval (i.e. give an interval $[\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})]$), then random interval $[\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})]$ is an \textbf{Interval Estimation} of $g(\theta)$.
+    Interval Estimation: to estimate $g(\theta)$, give \textbf{two} estimators $\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})$ defined on $\mathscr{X}$ as the two ends of interval (i.e. give an interval $[\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})]$), then random interval $[\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})]$ is an \textbf{Interval Estimation} of $g(\theta)$. 
+
+
+    \fbox{
+    \begin{minipage}{0.9\linewidth}
+        $ \Delta $ \textbf{NOTE:} Here $ g(\theta ) $ is the parameter, which is fixed, while confidence interval, as a function of data, is random. So all the probabilities discussed below are \textbf{Probability that the interval covers the real value}, rather that the real value falls in the interval. There is a huge difference.
+    \end{minipage}
+    }
+    
 
     \subsubsection{Confidence Interval}\label{SubSectionConfidenceInterval}
     \index{CI (Confidence Interval)}\index{Confidence Region!Confidence Interval}How to judge an interval estimation?
